--- a/app/templates/tiktok/hook_generator.html
+++ b/app/templates/tiktok/hook_generator.html
@@ -286,7 +286,7 @@
                     <i class="ph ph-house"></i>
                     Back to Dashboard
                 </a>
-                <a href="{{ url_for('tiktok.titles_hashtags') }}" class="btn-secondary">
+                <a href="{{ url_for('titles_hashtags.titles_hashtags') }}" class="btn-secondary">
                     <i class="ph ph-hash"></i>
                     Try Titles & Hashtags
                 </a>
