--- a/app/templates/tiktok/titles_hashtags.html
+++ b/app/templates/tiktok/titles_hashtags.html
@@ -286,7 +286,7 @@
                     <i class="ph ph-house"></i>
                     Back to Dashboard
                 </a>
-                <a href="{{ url_for('tiktok.trending_sounds') }}" class="btn-secondary">
+                <a href="{{ url_for('trending_sounds.trending_sounds') }}" class="btn-secondary">
                     <i class="ph ph-music-notes"></i>
                     Explore Sounds
                 </a>
