--- a/app/templates/tiktok/trending_sounds.html
+++ b/app/templates/tiktok/trending_sounds.html
@@ -39,7 +39,7 @@
                     <i class="ph ph-house"></i>
                     Back to Dashboard
                 </a>
-                <a href="{{ url_for('tiktok.trend_finder') }}" class="btn-secondary">
+                <a href="{{ url_for('trend_finder.trend_finder') }}" class="btn-secondary">
                     <i class="ph ph-trend-up"></i>
                     Find Trends
                 </a>
