--- a/app/templates/tiktok/trend_finder.html
+++ b/app/templates/tiktok/trend_finder.html
@@ -39,7 +39,7 @@
                     <i class="ph ph-house"></i>
                     Back to Dashboard
                 </a>
-                <a href="{{ url_for('tiktok_analytics.tiktok_analytics') }}" class="btn-secondary">
+                <a href="{{ url_for('tiktok_analytics.analytics') }}" class="btn-secondary">
                     <i class="ph ph-chart-line"></i>
                     View Analytics
                 </a>
