--- a/app/templates/tiktok/analytics.html
+++ b/app/templates/tiktok/analytics.html
@@ -39,7 +39,7 @@
                     <i class="ph ph-house"></i>
                     Back to Dashboard
                 </a>
-                <a href="{{ url_for('tiktok.hook_generator') }}" class="btn-secondary">
+                <a href="{{ url_for('hook_generator.hook_generator') }}" class="btn-secondary">
                     <i class="ph ph-megaphone-simple"></i>
                     Create Hooks
                 </a>
